Added html content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Ashley Stanley | Developer</title>
+</head>
+<body>
+	<header>
+	<div>
+	<p>Ashley Stanley</p>
+	<p>Junior Software Developer</p>
+	</div>
+	<nav>
+		<ul>
+			<li>About Me</li>
+			<li>Projects</li>
+		</ul>
+	</nav>
+	<div>
+	<h1>Ashley Stanley</h1>
+	<h3>Junior Software Developer</h3>
+	</div>
+	</header>
+	<main>
+		<section id="aboutMe">
+			<img src="">
+			<p>Biographical info</p>
+			<p>Contact info</p>
+			<p>Profiles:</p>
+			<ul>
+				<li>Github</li>
+				<li>LinkedIn</li>
+			</ul>
+		</section>
+		<section id="Projects">
+			<article>
+				<p> Project 1</p>
+			</article>
+			<article>
+				<p> Project 2</p>
+			</article>
+			<article>
+				<p> Project 3</p>
+			</article>
+		</section>
+	</main>
+	<footer>
+	</footer>
+	
+</body>
+</html>
