--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 <html>
 <head>
 	<title>Ashley Stanley | Developer</title>
+	<link href="https://fonts.googleapis.com/css?family=Charmonman:400,700|Nanum+Gothic" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="css/normalize.css">
+	<link type="text/css" rel="stylesheet" href="css/layout.css">
 </head>
 <body>
 	<header>
-	<div>
-	<p>Ashley Stanley</p>
-	<p>Junior Software Developer</p>
-	</div>
 	<nav>
-		<ul>
+	
+	<p id="name"><span id="firstName">Ashley</span> <span id="lastName">Stanley</span></p>
+		<ul id="right-nav">
 			<li>About Me</li>
 			<li>Projects</li>
 		</ul>
 	</nav>
-	<div>
+</div>
+	<div id=banner>
 	<h1>Ashley Stanley</h1>
-	<h3>Junior Software Developer</h3>
+	<h3> Junior Web Developer</h3>
 	</div>
 	</header>
 	<main>
@@ -26,19 +28,19 @@
 			<p>Biographical info</p>
 			<p>Contact info</p>
 			<p>Profiles:</p>
-			<ul>
+			<ul id="profiles">
 				<li>Github</li>
 				<li>LinkedIn</li>
 			</ul>
 		</section>
 		<section id="Projects">
-			<article>
+			<article id="project1">
 				<p> Project 1</p>
 			</article>
-			<article>
+			<article id="project2">
 				<p> Project 2</p>
 			</article>
-			<article>
+			<article id="project3">
 				<p> Project 3</p>
 			</article>
 		</section>
