"Added icons for contact info"

--- a/index.html
+++ b/index.html
@@ -34,30 +34,31 @@
 		<section id="aboutMe">
 			<article id="info">
 				<h4>About Me</h4>
-				
-					<img src="../images/stanleyheadshot.jpg">
-				
+				<img src="../images/stanleyheadshot.jpg">
 				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi optio quidem atque itaque dolores quae, reiciendis aperiam similique adipisci vel! Debitis totam fuga amet eum dolorem aspernatur quasi facere eligendi.</p>
 		   </article>
 		   <article id="contact">
 			<h4>Contact</h4>
 			<ul id="profiles">
-				<li id="email">amstnly@gmail.com</li>
-				<li id="github">github.com/amstanley1</li>
-				<li id="linkedIn">linkedin.com/ashleystanley1</li>
+				<a href="mailto:amstnyl@gmail.com"><li id="email"><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li></a>
+				<a href="github.com/amstanley1"><li id="github"><img src="../images/github.svg" class="icon">github.com/amstanley1</li></a>
+				<a href="linkedin.com/in/ashleystanley1"><li id="linkedIn"><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li></a>
 			</ul>
 		</article>
 		</section>
 		<section id="projects">
+			<h4>Projects</h4>
+			<div id=project-grid>
 			<article id="project1">
-				<h4>Virtual Pet Shelter</h4>
+				<h6>Virtual Pet Shelter</h6>
 			</article>
 			<article id="project2">
-				<h4>Virtual Pets Amok</h4>
+				<h6>Virtual Pets Amok</h6>
 			</article>
 			<article id="project3">
-				<h4>Film Reviews</h4>
+				<h6>Film Reviews</h6>
 			</article>
+			</div>
 		</section>
 	</main>
 	<footer>
