"Adjust z-indexes of header and sections"

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi optio quidem atque itaque dolores quae, reiciendis aperiam similique adipisci vel! Debitis totam fuga amet eum dolorem aspernatur quasi facere eligendi.</p>
 		   </article>
 		   <article id="contact">
-			<h4>Contact</h4>
+			<a href="github.com"><h4>Contact</h4></a>
 			<ul id="profiles">
 				<a href="mailto:amstnyl@gmail.com"><li id="email"><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li></a>
-				<a href="github.com/amstanley1"><li id="github"><img src="../images/github.svg" class="icon">github.com/amstanley1</li></a>
+				<a href="https://github.com/amstanley1"><li id="github"><img src="../images/github.svg" class="icon">github.com/amstanley1</li></a>
 				<a href="linkedin.com/in/ashleystanley1"><li id="linkedIn"><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li></a>
 			</ul>
 		</article>
