Added correct linked link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<ul id="profiles">
 				<a href="mailto:amstnyl@gmail.com"><li id="email"><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li></a>
 				<a href="https://github.com/amstanley1"><li id="github"><img src="../images/github.svg" class="icon">github.com/amstanley1</li></a>
-				<a href="linkedin.com/in/ashleystanley1"><li id="linkedIn"><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li></a>
+				<a href="https://www.linkedin.com/in/ashleystanley1/"><li id="linkedIn"><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li></a>
 			</ul>
 		</article>
 		</section>
