"Changed footer icon colors and anchor links to open in new window"

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 			<h4>Contact</h4>
 			<ul id="profiles">
 				<a href="mailto:amstnyl@gmail.com"><li id="email"><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li></a>
-				<a href="https://github.com/amstanley1"><li id="github"><img src="../images/github.svg" class="icon">github.com/amstanley1</li></a>
-				<a href="https://www.linkedin.com/in/ashleystanley1/"><li id="linkedIn"><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li></a>
+				<a href="https://github.com/amstanley1"  target="_blank"><li id="github"><img src="../images/github.svg" class="icon">github.com/amstanley1</li></a>
+				<a href="https://www.linkedin.com/in/ashleystanley1/"  target="_blank"><li id="linkedIn"><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li></a>
 			</ul>
 		</article>
 		</section>
@@ -81,9 +81,9 @@
 		</div>
 		<div id="footer-second-column">
 			
-				<a href="mailto:amstnyl@gmail.com"><img src="../images/gmail.svg" class="icon"></a>
-				<a href="https://github.com/amstanley1"><img src="../images/github.svg" class="icon"></a>
-				<a href="https://www.linkedin.com/in/ashleystanley1/"><img src="../images/linkedin.svg" class="icon"></a>
+				<a href="mailto:amstnyl@gmail.com"><img src="../images/gmail.svg" class="svg"></a>
+				<a href="https://github.com/amstanley1"  target="_blank"><img src="../images/github.svg" class="svg"></a>
+				<a href="https://www.linkedin.com/in/ashleystanley1/"  target="_blank"><img src="../images/linkedin.svg" class="svg"></a>
 				
 			</div>
 	</footer>
