--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Ashley Stanley | Developer</title>
 	<link href="https://fonts.googleapis.com/css?family=K2D:400,700" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="css/normalize.css">
-	<link type="text/css" rel="stylesheet" href="css/layout.css">
+	<link type="text/css" rel="stylesheet" href="css/styles.css">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
@@ -52,19 +52,19 @@
 					<h6>Film Reviews</h6>
 					<div id="film-reviews">	</div>
 					<p>Web application with  a gallery of film reviews,  user can click an individual film review to go to review’s page and see its content.</p>
-					<p class="skills">Java, Spring MVC</p>
+					<p class="project-skills">Java, Spring MVC</p>
 				</article>
 				<article id="project2">
 					<h6>Virtual Pets Amok</h6>
 					<div id="virtual-pets-amok"></div>
 					<p>Console application of a virtual pet shelter with robotic and organic cats and dogs. User can feed and water organic pets, oil robotic pets, and walk the dogs.</p>
-					<p class="skills">Java, Object Oriented</p>
+					<p class="project-skills">Java, Object Oriented</p>
 				</article>
 				<article id="project3">
 					<h6>Virtual Pet Shelter</h6>
 					<div id="virtual-pet-shelter"></div>	
 					<p> Console application of a virtual pet shelter with several virtual horses the user can select and feed, play with, and water to decrease need levels which rise automatically as the game is played.</p>
-					<p class="skills">Java, Object Oriented</p>
+					<p class="project-skills">Java, Object Oriented</p>
 				</article>
 			</div>
 		</section>
