Added links to github projects

--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
 			<div class="arrow-down"></div>
 			<h4>Projects</h4>
 			<div id=project-grid>
-				<article id="project1">
+				<a href="https://github.com/amstanley1/movie-reviews" target="_blank"><article id="project1">
 					<h6>Film Reviews</h6>
 					<div id="film-reviews">	</div>
 					<p>Web application with  a gallery of film reviews,  user can click an individual film review to go to review’s page and see its content.</p>
 					<p class="project-skills">Java, Spring MVC</p>
-				</article>
-				<article id="project2">
+				</article></a>
+				<a href="https://github.com/amstanley1/virtual-pets-amok" target="_blank"><article id="project2">
 					<h6>Virtual Pets Amok</h6>
 					<div id="virtual-pets-amok"></div>
 					<p>Console application of a virtual pet shelter with robotic and organic cats and dogs. User can feed and water organic pets, oil robotic pets, and walk the dogs.</p>
 					<p class="project-skills">Java, Object Oriented</p>
-				</article>
-				<article id="project3">
+				</article></a>
+				<a href="https://github.com/amstanley1/virtual-pet-shelter" target="_blank"><article id="project3">
 					<h6>Virtual Pet Shelter</h6>
 					<div id="virtual-pet-shelter"></div>	
 					<p> Console application of a virtual pet shelter with several virtual horses the user can select and feed, play with, and water to decrease need levels which rise automatically as the game is played.</p>
 					<p class="project-skills">Java, Object Oriented</p>
-				</article>
+				</article></a>
 			</div>
 		</section>
 	</main>
