Adjusted max-width

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 	<header>
-		<a href="#banner"><h1 id="name"><span id="firstName">Ashley</span> <span id="lastName">Stanley</span></h1></a>
+		<a href="#banner">
+			<h1 id="name">Ashley Stanley</h1>
+		</a>
 		<nav>
 			<ul>
 				<a href="#aboutMe"><li>About Me</li></a>
