added hidden descriptions for projects

--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
 				<h3> Junior Software Developer</h3>
 			</div>
 		</section>
-		<section id="specialEvents">
+		<section id="projectSlider">
 				<div class="arrow-down"></div>
-			<h2>Special Events</h2>
-		  <p>We regularly host socials and meetups to sharpen talent and foster connections. Join us!</p>
+		
+		 
 	
 			<div id="slider">
+					<h2 id="sliderHeading">Projects</h2>
 			  <div id="slider-frame">
 				
 				<div id="slider-prev">PREV</div>
@@ -39,13 +40,13 @@
 	
 				<div id="slider-images">
 				  <div data-src="../images/filmreviews.png">
-					Let's boot up your new project.
+					Film Reviews Site
 				  </div>
 				  <div data-src="../images/virtualpetsamok.jpg">
-					You'll want to double-click this one.
+					Virtual Pets Amok
 				  </div>
 				  <div data-src="../images/virtualpetshelter.jpg">
-					Our cookies are super.
+					Virtual pet Shelter
 				  </div>
 				</div>
 	
@@ -84,19 +85,19 @@
 				<a href="https://github.com/amstanley1/movie-reviews" target="_blank"><article id="project1">
 					<h6>Film Reviews</h6>
 					<div id="film-reviews">	</div>
-					<p>Web application with  a gallery of film reviews,  user can click an individual film review to go to review’s page and see its content.</p>
+					<p class="projectDescription">Web application with  a gallery of film reviews,  user can click an individual film review to go to review’s page and see its content.</p>
 					<p class="project-skills">Java, Spring MVC</p>
 				</article></a>
 				<a href="https://github.com/amstanley1/virtual-pets-amok" target="_blank"><article id="project2">
 					<h6>Virtual Pets Amok</h6>
 					<div id="virtual-pets-amok"></div>
-					<p>Console application of a virtual pet shelter with robotic and organic cats and dogs. User can feed and water organic pets, oil robotic pets, and walk the dogs.</p>
+					<p class="projectDescription">Console application of a virtual pet shelter with robotic and organic cats and dogs. User can feed and water organic pets, oil robotic pets, and walk the dogs.</p>
 					<p class="project-skills">Java, Object Oriented</p>
 				</article></a>
 				<a href="https://github.com/amstanley1/virtual-pet-shelter" target="_blank"><article id="project3">
 					<h6>Virtual Pet Shelter</h6>
 					<div id="virtual-pet-shelter"></div>	
-					<p> Console application of a virtual pet shelter with several virtual horses the user can select and feed, play with, and water to decrease need levels which rise automatically as the game is played.</p>
+					<p class="projectDescription"> Console application of a virtual pet shelter with several virtual horses the user can select and feed, play with, and water to decrease need levels which rise automatically as the game is played.</p>
 					<p class="project-skills">Java, Object Oriented</p>
 				</article></a>
 			</div>
