Added projects page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<ul>
 				<a href="/index.html"><li>Home</li></a>
 				<a href="javascript:void(0);" id="modal-trigger"><li>About Me</li></a>
-				<a href="#projects"><li>Projects</li></a>
+				<a href="projects.html"><li>Projects</li></a>
 			</ul>
 		</nav>
 	</header>
@@ -79,33 +79,7 @@
 				</ul>
 			</article>
 		</section>
-		<section id="projects">
-			<div class="arrow-down"></div>
-			<h4>Projects</h4>
-			<div id="project-grid">
-				<article id="project1">
-					<h6>Film Reviews</h6>
-					<div id="film-reviews">	</div>
-					<button class="showDescription">Show Description</button>
-					<p class="projectDescription closeDescription">Web application with  a gallery of film reviews,  user can click an individual film review to go to review’s page and see its content.</p>
-					<p class="project-skills">Java, Spring MVC</p>
-				</article>
-				<article id="project2">
-					<h6>Virtual Pets Amok</h6>
-					<div id="virtual-pets-amok"></div>
-					<button class="showDescription">Show Description</button>
-					<p class="projectDescription closeDescription">Console application of a virtual pet shelter with robotic and organic cats and dogs. User can feed and water organic pets, oil robotic pets, and walk the dogs.</p>
-					<p class="project-skills">Java, Object Oriented</p>
-				</article>
-				<article id="project3">
-					<h6>Virtual Pet Shelter</h6>
-					<div id="virtual-pet-shelter"></div>
-					<button class="showDescription">Show Description</button>
-					<p class="projectDescription closeDescription"> Console application of a virtual pet shelter with several virtual horses the user can select and feed, play with, and water to decrease need levels which rise automatically as the game is played.</p>
-					<p class="project-skills">Java, Object Oriented</p>
-				</article>
-			</div>
-		</section>
+		
 	</main>
 	<footer>
 		<div id="footer-first-column">
