Added headshot to modal

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					
 							<article id="modal-info">
 								<h4>About Me</h4>
-								<!--<div id="headshot"></div>-->
+								<div id="headshot"></div>
 								<p id="bio">I'm a junior software developer living in Cleveland, Ohio. I am currently engaged in a coding boot camp, learning agile full-stack software development.</p>
 								<p id="skills-heading">Technical Skills:</p>
 									<p id="skills">Java  •  Spring  •  Hibernate  •  JavaScript  •  jQuery  •  HTML5  •  CSS3  •  MVC  •  Responsive Design / Mobile
