--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <title>Ashley Stanley | Developer</title>
     <link href="https://fonts.googleapis.com/css?family=K2D:400,700" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/normalize.css">
-    <link type="text/css" rel="stylesheet" href="css/projectsStyles.css">
+    <link type="text/css" rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
@@ -77,7 +77,7 @@
                                 
                                         <article id="modal-info">
                                             <h4>About Me</h4>
-                                            <!--<div id="headshot"></div>-->
+                                            <div id="headshot"></div>
                                             <p id="bio">I'm a junior software developer living in Cleveland, Ohio. I am currently engaged in a coding boot camp, learning agile full-stack software development.</p>
                                             <p id="skills-heading">Technical Skills:</p>
                                                 <p id="skills">Java  •  Spring  •  Hibernate  •  JavaScript  •  jQuery  •  HTML5  •  CSS3  •  MVC  •  Responsive Design / Mobile
