Fixed modal box overflow and mobile view

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 			<div class="arrow-down"></div>
 			<article id="info">
 				<h4>About Me</h4>
-				<div id="headshot"></div>
-				<p id="bio">I'm a junior software developer living in Cleveland, Ohio. I am currently engaged in a coding boot
+				<img src="../images/stanleyheadshot.jpg" class="headshot"></img>
+				<p class="bio">I'm a junior software developer living in Cleveland, Ohio. I've recently completed a coding boot
 					camp, learning agile full-stack software development.</p>
-				<p id="skills-heading">Technical Skills:</p>
-				<p id="skills">Java • Spring • Hibernate • JavaScript • jQuery • HTML5 • CSS3 • MVC • Responsive Design / Mobile
-					Structured Query Language (SQL) • Transactional Databases / MSSQL • Object Oriented • Source Control / Git
+				<p class="skills-heading">Technical Skills:</p>
+				<p class="skills">Java • Spring • Hibernate • JavaScript • jQuery • HTML5 • CSS3 • MVC • Responsive Design / Mobile
+					Structured Query Language (SQL) • Relational Databases • AJAX • Restful APIs • Object Oriented • Source Control / Git
 				</p>
 			</article>
 			<article id="contact">
@@ -118,12 +118,12 @@
 				<section id="modal-aboutMe">
 					<article id="modal-info">
 						<h4>About Me</h4>
-						<div id="headshot"></div>
-						<p id="bio">I'm a junior software developer living in Cleveland, Ohio. I am currently engaged in a coding boot
+						<img src="../images/stanleyheadshot.jpg" class="headshot"></img>
+						<p class="bio">I'm a junior software developer living in Cleveland, Ohio. I am currently engaged in a coding boot
 							camp, learning agile full-stack software development.</p>
-						<p id="skills-heading">Technical Skills:</p>
-						<p id="skills">Java • Spring • Hibernate • JavaScript • jQuery • HTML5 • CSS3 • MVC • Responsive Design / Mobile
-							Structured Query Language (SQL) • Transactional Databases / MSSQL • Object Oriented • Source Control / Git
+						<p class="skills-heading">Technical Skills:</p>
+						<p class="skills">Java • Spring • Hibernate • JavaScript • jQuery • HTML5 • CSS3 • MVC • Responsive Design / Mobile
+							Structured Query Language (SQL) • Relational Databases • AJAX • Restful APIs • Object Oriented • Source Control / Git
 						</p>
 					</article>
 					<article id="modal-contact">
