Added We Can Read IT project

--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
 					<div id="slider-prev">PREV</div>
 					<div id="slider-next">NEXT</div>
 					<div id="slider-images">
+						<div data-src="../images/wecanreadit.png">
+								We Can Read IT: Java, JavaScript, Object Oriented
+						</div>
 						<div data-src="../images/filmreviews.png">
 							Film Reviews Site: Java, Spring MVC
 						</div>
 						<div data-src="../images/virtualpetsamok.jpg">
 							Virtual Pets Amok: Java, Object Oriented
 						</div>
-						<div data-src="../images/virtualpetshelter.jpg">
-							Virtual pet Shelter: Java, Object Oriented
-						</div>
+						
 					</div>
 				</div>
 				<div id="slider-caption">
@@ -82,15 +83,15 @@
 			</article>
 			<article id="contact">
 				<h4>Contact</h4>
-				<ul id="profiles">
+				<ul class="profiles">
 					<a href="mailto:amstnyl@gmail.com">
-						<li id="email"><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li>
+						<li><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li>
 					</a>
 					<a href="https://github.com/amstanley1" target="_blank">
-						<li id="github"><img src="../images/github.svg" class="icon">github.com/amstanley1</li>
+						<li><img src="../images/github.svg" class="icon">github.com/amstanley1</li>
 					</a>
 					<a href="https://www.linkedin.com/in/ashleystanley1/" target="_blank">
-						<li id="linkedIn"><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li>
+						<li><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li>
 					</a>
 				</ul>
 			</article>
@@ -128,15 +129,15 @@
 					</article>
 					<article id="modal-contact">
 						<h4>Contact</h4>
-						<ul id="profiles">
+						<ul class="profiles">
 							<a href="mailto:amstnyl@gmail.com">
-								<li id="email"><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li>
+								<li><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li>
 							</a>
 							<a href="https://github.com/amstanley1" target="_blank">
-								<li id="github"><img src="../images/github.svg" class="icon">github.com/amstanley1</li>
+								<li><img src="../images/github.svg" class="icon">github.com/amstanley1</li>
 							</a>
 							<a href="https://www.linkedin.com/in/ashleystanley1/" target="_blank">
-								<li id="linkedIn"><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li>
+								<li><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li>
 							</a>
 						</ul>
 					</article>
