--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,16 @@
         <section id="projects">
             <h4>Projects</h4>
             <div id="project-grid">
-                <article id="project1">
+                    <article id="project1">
+                            <a href="http://we-can-read-it.herokuapp.com/" target="_blank">
+                                <h6>We Can Read IT</h6>
+                                <div id="we-can-read-it"> </div>
+                            </a>
+                            <button class="showDescription">Show Description</button>
+                            <p class="projectDescription closeDescription">Web application for librarians/teachers to manage children's reading programs. Librarians can assign readers to groups, add books to the group, and assign points and rewards to incentivize reading goals.</p>
+                            <p class="project-skills">Java, Spring MVC, JavaScript, HTML, CSS</p>
+                        </article>
+                <article id="project2">
                     <a href="https://github.com/amstanley1/movie-reviews" target="_blank">
                         <h6>Film Reviews</h6>
                         <div id="film-reviews"> </div>
@@ -48,9 +57,9 @@
                     <button class="showDescription">Show Description</button>
                     <p class="projectDescription closeDescription">Web application with a gallery of film reviews, user
                         can click an individual film review to go to review’s page and see its content.</p>
-                    <p class="project-skills">Java, Spring MVC</p>
+                    <p class="project-skills">Java, Spring MVC, JavaScript, HTML, CSS</p>
                 </article>
-                <article id="project2">
+                <article id="project3">
                     <a href="https://github.com/amstanley1/virtual-pets-amok" target="_blank">
                         <h6>Virtual Pets Amok</h6>
                         <div id="virtual-pets-amok"></div>
@@ -61,7 +70,7 @@
                         walk the dogs.</p>
                     <p class="project-skills">Java, Object Oriented</p>
                 </article>
-                <article id="project3">
+                <!-- <article id="project4">
                     <a href="https://github.com/amstanley1/virtual-pet-shelter" target="_blank">
                         <h6>Virtual Pet Shelter</h6>
                         <div id="virtual-pet-shelter"></div>
@@ -71,7 +80,7 @@
                         several virtual horses the user can select and feed, play with, and water to decrease need
                         levels which rise automatically as the game is played.</p>
                     <p class="project-skills">Java, Object Oriented</p>
-                </article>
+                </article> -->
             </div>
         </section>
 
@@ -109,13 +118,13 @@
 						<h4>Contact</h4>
 						<ul id="profiles">
 							<a href="mailto:amstnyl@gmail.com">
-								<li id="email"><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li>
+								<li><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li>
 							</a>
 							<a href="https://github.com/amstanley1" target="_blank">
-								<li id="github"><img src="../images/github.svg" class="icon">github.com/amstanley1</li>
+								<li><img src="../images/github.svg" class="icon">github.com/amstanley1</li>
 							</a>
 							<a href="https://www.linkedin.com/in/ashleystanley1/" target="_blank">
-								<li id="linkedIn"><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li>
+								<li><img src="../images/linkedin.svg" class="icon">linkedin.com/ashleystanley1</li>
 							</a>
 						</ul>
 					</article>
