--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						<p class="bio">I'm a junior software developer living in Cleveland, Ohio. I am currently engaged in a coding boot
 							camp, learning agile full-stack software development.</p>
 						<p class="skills-heading">Technical Skills:</p>
-						<p class="skills">Java • Spring • Hibernate • JavaScript • jQuery • HTML5 • CSS3 • MVC • Responsive Design / Mobile
+						<p class="skills">Python • Java • Spring • Hibernate • JavaScript • jQuery • HTML5 • CSS3 • MVC • Responsive Design / Mobile
 							Structured Query Language (SQL) • Relational Databases • AJAX • Restful APIs • Object Oriented • Source Control / Git
 						</p>
 					</article>
