--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	</main>
 	<footer>
 		<div id="footer-first-column">
-			<a href="mailto:amstnyl@gmail.com"><img src="../images/gmail.svg" class="svg"></a>
+			<a href="mailto:amstnly@gmail.com"><img src="../images/gmail.svg" class="svg"></a>
 			<a href="https://github.com/amstanley1" target="_blank"><img src="../images/github.svg" class="svg"></a>
 			<a href="https://www.linkedin.com/in/ashleystanley1/" target="_blank"><img src="../images/linkedin.svg" class="svg"></a>
 		</div>
@@ -129,7 +129,7 @@
 					<article id="modal-contact">
 						<h4>Contact</h4>
 						<ul class="profiles">
-							<a href="mailto:amstnyl@gmail.com">
+							<a href="mailto:amstnly@gmail.com">
 								<li><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li>
 							</a>
 							<a href="https://github.com/amstanley1" target="_blank">
