--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<section id=banner>
 			<div id="overlay">
 				<h2>Ashley Stanley</h2>
-				<h3> Junior Software Developer</h3>
+				<h3>Software Developer</h3>
 			</div>
 		</section>
 		<section id="projectSlider">
@@ -73,11 +73,10 @@
 			<div class="arrow-down"></div>
 			<article id="info">
 				<h4>About Me</h4>
-				<p class="bio">I'm a junior software developer living in Cleveland, Ohio. I've recently completed a coding boot
-					camp, learning agile full-stack software development.</p>
+				<p class="bio">I'm a software developer living in Cleveland, Ohio. While much of my experience has been gained while working on the front end, I also enjoy working on the backend any chance I get.</p>
 				<p class="skills-heading">Technical Skills:</p>
-				<p class="skills">Java • Spring • Hibernate • JavaScript • jQuery • HTML5 • CSS3 • MVC • Responsive Design / Mobile
-					Structured Query Language (SQL) • Relational Databases • AJAX • Restful APIs • Object Oriented • Source Control / Git
+				<p class="skills">JavaScript • React • Redux  • SCSS/CSS3 • HTML5 • UX Design • Bootstrap • Selenium • JSON  • Python • Java • Spring • MVC • Responsive Design / Mobile •
+					SQL • Relational Databases • Restful APIs • Maven • RabbitMQ • Agile • OOP • Git
 				</p>
 			</article>
 			<article id="contact">
@@ -118,12 +117,10 @@
 				<section id="modal-aboutMe">
 					<article id="modal-info">
 						<h4>About Me</h4>
-						<img src="../images/stanleyheadshot.jpg" class="headshot"></img>
-						<p class="bio">I'm a junior software developer living in Cleveland, Ohio. I am currently engaged in a coding boot
-							camp, learning agile full-stack software development.</p>
+						<p class="bio">I'm a software developer living in Cleveland, Ohio. While much of my experience has been gained while working on the front end, I also enjoy working on the backend any chance I get.</p>
 						<p class="skills-heading">Technical Skills:</p>
-						<p class="skills">Python • Java • Spring • Hibernate • JavaScript • jQuery • HTML5 • CSS3 • MVC • Responsive Design / Mobile
-							Structured Query Language (SQL) • Relational Databases • AJAX • Restful APIs • Object Oriented • Source Control / Git
+						<p class="skills">JavaScript • React • Redux  • SCSS/CSS3 • HTML5 • UX Design • Bootstrap • Selenium • JSON  • Python • Java • Spring • MVC • Responsive Design / Mobile •
+							SQL • Relational Databases • Restful APIs • Maven • RabbitMQ • Agile • OOP • Git
 						</p>
 					</article>
 					<article id="modal-contact">
