--- a/projects.html
+++ b/projects.html
@@ -114,8 +114,8 @@
 					</article>
 					<article id="modal-contact">
 						<h4>Contact</h4>
-						<ul id="profiles">
-							<a href="mailto:amstnyl@gmail.com">
+						<ul class="profiles">
+							<a href="mailto:amstnly@gmail.com">
 								<li><img src="../images/gmail.svg" class="icon">amstnly@gmail.com</li>
 							</a>
 							<a href="https://github.com/amstanley1" target="_blank">
